# modulegraph2

./: .appveyor.yml  .gitignore  .hgignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  LICENSE.txt  Makefile  ReadMe.rst  pyproject.toml  tox.ini
.github/workflows/: lint.yml  release_to_pypi.yml  test.yml
doc/: Makefile  changelog.rst  command-line.rst  conf.py  development.rst  examples.rst  index.rst  internals.rst  license.rst  modulegraph2.rst  objectgraph.rst  packageinfo.rst  requirements.txt
doc/_templates/: links.html
modulegraph2/: __init__.py  __main__.py  _ast_tools.py  _bytecode_tools.py  _callback_list.py  _depinfo.py  _distributions.py  _dotbuilder.py  _graphbuilder.py  _htmlbuilder.py  _implies.py  _importinfo.py  _modulegraph.py  _mypyc_support.py  _nodes.py  _swig_support.py  _utilities.py  _virtualenv_support.py
testsuite/: run-in-env.py  test_api.py  test_bytecode_tools.py  test_callback_list.py  test_commandline.py  test_distributions.py  test_graphbuilder.py  test_implies.py  test_modulegraph.py  test_mypyc_support.py  test_nodes.py  test_setuptools_namespace.py  test_six_support.py  test_swig_support.py  test_utilities.py  test_virtual_environments.py  test_virtualenv_support.py  util.py
testsuite/bytecode-package/bytecode_package.egg-info/: PKG-INFO
testsuite/modulegraph-dir/: trivial-script
testsuite/modulegraph-dir/pkg_e/: __init__.py  module.py
testsuite/mypyc-dir/full-package/: setup.py
testsuite/mypyc-dir/full-package/package/: __init__.py  nodeps.py
testsuite/mypyc-dir/partial-package/: setup.py
testsuite/mypyc-dir/partial-package/package/: sub.py
testsuite/mypyc-dir/plain-init-package/: setup.py
testsuite/mypyc-dir/plain-init-package/package/: __init__.py
testsuite/simple-package/simple_package.egg-info/: PKG-INFO
testsuite/six-dir/: using_six.py  using_six_incorrectly.py  using_vendored_six.py
testsuite/swig-dir/package_submod/package/: example.py
